# chessbench

./: .env.example  .gitignore  README.md  pyproject.toml
artifacts/: adaptive-public-2026-07.json
campaigns/: adaptive-public-2026-07.json
chessbench/: __init__.py  __main__.py  agents.py  calibration.py  campaigns.py  categories.py  cloudflare_sync.py  conditions.py  corpus.py  database.py  env.py  esoteric_curation.py  games.py  imaging.py  leaderboards.py  models.py  openings.py  puzzles.py  rated_pool.py  rated_sessions.py  rating.py  registry.py  report.py  response_protocols.py  runner.py  sprt.py  store.py  stream.py  suite.py  types.py  usage.py  variants.py
corpora/: README.md  index.json
data/: composed_problems.json  generated_puzzles.json  sample_puzzles.csv
docs/: CAMPAIGNS.md  DESIGN.md  ESOTERIC_CORPUS.md  FRONTIER_PROBES.md  HISTORICAL_CORPUS.md  HISTORICAL_SOURCES.md  LEGACY.md  RATED_SESSIONS.md  SUITES.md  private-corpus-mvp.md
registry/: models.json
runs/: gpt4omini_public_v1.out
scripts/: README.md  analyze_lichess.py  audit_rated_alternate_mates.py  backfill_puzzle_ratings.py  bootstrap_esoteric_review.py  build_composed_fixtures.py  build_corpora.py  build_esoteric_release.py  build_private_esoteric.py  build_public_corpus_bundle.py  build_rated_pool.py  build_rating_ordered_standard.py  build_smoke_suites.py  build_standard_suite.py  build_standard_v4.py  calibrate_suite.py  curate_esoteric.py  curate_lichess.py  download_historical_sources.py  download_puzzles.py  export_prompt_catalog.py  export_rated_campaign.py  import_yacpdb.py  (+17 more)
(+371 files in other folders)
