[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chessbench"
version = "0.1.0"
description = "A chess benchmarking suite for LLMs: puzzles (incl. esoteric) and model-vs-model play."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "chess>=1.11",   # python-chess: legality, SAN/UCI/FEN/PGN, UCI engine client
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
dev = ["pytest>=8", "mypy>=1.10"]

[project.scripts]
chessbench = "chessbench.__main__:main"

[tool.setuptools.packages.find]
include = ["chessbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
